--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ numpy = "^1.25.2"
 requests = "^2.31.0"
 bs4 = "^0.0.1"
 dateparser = "^1.1.8"
+stem = "^1.8.2"
+pysocks = "^1.7.1"
 
 
 [build-system]
