--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ stem = "^1.8.2"
 pysocks = "^1.7.1"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
