--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ bs4 = "^0.0.1"
 dateparser = "^1.1.8"
 stem = "^1.8.2"
 pysocks = "^1.7.1"
+sqlalchemy = "^2.0.25"
+matplotlib = "^3.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
