--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ stem = "^1.8.2"
 pysocks = "^1.7.1"
 sqlalchemy = "^2.0.25"
 matplotlib = "^3.8.2"
+bidict = "^0.22.1"
 
 
 [tool.poetry.group.dev.dependencies]
