independence related code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "^2.0.25"
 matplotlib = "^3.8.2"
 bidict = "^0.22.1"
 jupyter = "^1.0.0"
+pydantic = "^2.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
