--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "python-the-west"
-version = "0.1.0"
+version = "0.2.1"
 description = "Interact with the browser game 'The west' programatically using http requests."
 authors = ["MariusSilviuHriscu <hriscumarius65536@gmail.com>"]
 readme = "README.md"
 packages = [{ include = "the_west_inner" },
-    { include = "automation_scripts" }
+    { include = "automation_scripts" },
+    { include = "connection_sessions" }
     ]
 
 [tool.poetry.dependencies]
